--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -36,7 +36,7 @@
   </section>
   <section class="form">
       <h2>Formulier</h2>
-      <form class="" action="" method="post">
+      <form class="intermediarForm" action="" method="post">
           <div class="q">
               <label>Woonplaats</label>
               <input type="text" name="" value="">
@@ -44,32 +44,42 @@
           <div class="q">
               <label for="transport">Vervoersmiddel
                   <div class="options">
-                      <label for="fiets">Fiets</label>
-                      <label for="auto">Auto</label>
-                      <label for="ov">OV</label>
-                      <label for="lopend">Lopend</label>
-                      <input type="checkbox" name="transport" id="fiets" value="fiets">
-                      <input type="checkbox" name="transport" id="auto" value="auto">
-                      <input type="checkbox" name="transport" id="ov" value="ov">
-                      <input type="checkbox" name="transport" id="lopend" value="lopend">
+                    <input type="checkbox" name="transport" id="fiets" value="fiets">
+                    <label for="fiets">Fiets</label>
+                    <input type="checkbox" name="transport" id="auto" value="auto">
+                    <label for="auto">Auto</label>
+                    <input type="checkbox" name="transport" id="ov" value="ov">
+                    <label for="ov">OV</label>
+                    <input type="checkbox" name="transport" id="lopend" value="lopend">
+                    <label for="lopend">Lopend</label>
+
                   </div>
               </label>
           </div>
           <div class="q">
               <label for="traveltime"> Reistijd
                   <div class="options">
-                      <label for="fiets">-15 min</label>
-                      <label for="auto">15 tot 45 min</label>
-                      <label for="ov">45 - 60 min</label>
-                      <label for="lopend">60+ min</label>
-                      <input name="traveltime" type="checkbox" id="15" value="15">
-                      <input name="traveltime" type="checkbox" id="45" value="45">
-                      <input name="traveltime" type="checkbox" id="60" value="60">
-                      <input name="traveltime" type="checkbox" id="60+" value="60+">
+                    <input  name="traveltime" type="checkbox" id="vijftien" value="15">
+                      <label for="vijftien">-15 min</label>
+                      <input  name="traveltime" type="checkbox" id="vijfenveertig" value="45">
+                      <label for="vijfenveertig">15 tot 45 min</label>
+                      <input  name="traveltime" type="checkbox" id="zestig" value="60">
+                      <label for="zestig">45 - 60 min</label>
+                      <input  name="traveltime" type="checkbox" id="zestigplus" value="61">
+                      <label for="zestigplus">60+ min</label>
                   </div>
               </label>
           </div>
-          <button type="button" name="button">submit</button>
+          <div class="q">
+            <label for="">Bedrijven</label>
+            <ul class="bedrijven">
+              <% bedrijven.forEach(function(bedrijf){ %>
+              <li value= "<%=bedrijf.travelDuration%>"class=<%=bedrijf.travelDuration%>><%=bedrijf.bedrijfsnaam %> <span><%=bedrijf.travelDuration%></span> minuten<span><%=bedrijf.travelDistance%></span> km</li>
+
+          <%  }) %>
+            </ul>
+          </div>
+          <!-- <button type="button" name="button">submit</button> -->
       </form>
   </section>
 </body>
